Update modifiers when buttons is set in MouseEvent

NACL expects modifiers to contain buttons information.
So we need to also set that information not only in
buttons field but also modifiers.

Bug: 839539, 839303
Change-Id: Ib859a2e071984be4625f0a42094982c7513ae5ae
Reviewed-on: https://chromium-review.googlesource.com/1052171
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Ella Ge <eirage@chromium.org>
Commit-Queue: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557657}
Former-commit-id: 2306a9caf973ef319f5a53356568434159643675